initial check-ins for input and output examples

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root></app-root>
+
+<!--<div style="background-color: green;height: 75px;">
+	Header
+</div>-->
+
+ <products-component></products-component>
+
+
+<!--<div style="background-color: yellow;height: 75px;">
+	Footer
+</div>-->
+
 </body>
+
 </html>
